pre-alpha version

--- a/spec/lib/torrent.site.org.html
+++ b/spec/lib/torrent.site.org.html
@@ -17,8 +17,8 @@
         <a href="/link.svg">static </a>
 
 
-        <form action="do.php"></form>
-        <form action="/work.php"></form>
+        <form action="do.php" id="do"></form>
+        <form action="/work.php" id="work"></form>
 
         <a href="/">relative link </a>
         <a href="/about.html">relative link </a>
